<resources>
    <string name="app_name">NewsApp</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="back">Back</string>
    <string name="author">author</string>
    <string name="date">date</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="fname_hint">First Name</string>
    <string name="lname_hint">Last Name</string>
    <string name="login_btn_label">Login</string>
    <string name="create_new_account_label">Create New Account</string>
    <string name="submit_btn_label">Submit</string>
    <string name="cancel_btn_label">Cancel</string>
    <string name="create_forum_btn_label">Create Forum</string>
    <string name="logout_btn_label">Logout</string>
    <string name="enter_msg_hint">Enter Message</string>
    <string name="enter_forum_title_hint">Enter Forum Title</string>
    <string name="business">Business</string>
    <string name="health">Health</string>
    <string name="entertainment">Entertainment</string>
    <string name="science">Science</string>
    <string name="technology">Technology</string>
    <string name="general">General</string>
    <string name="sports">Sports</string>
    <string name="logout">logout\n</string>
    <string name="todo">TODO</string>
    <string name="add_news">add news</string>
    <string name="cancel">Cancel</string>
    <string name="btn_add_news">Add News</string>
    <string name="url_to_image">Url To Image</string>
    <string name="author_name">Author Name</string>
    <string name="add_your_new_news">Add Your New News</string>
    <string name="et_title">Title</string>
    <string name="et_description">Description</string>
    <string name="about_us">about us</string>
    <string name="this_app_was_created_by_nhamza_damra_nmohammed_farajeen_nas_a_software_project_for_the_database_course_nfor_dr_rushdi_hamamreh">This app was created by \nHamza Damra \nMohammed Farajeen \nas a software project for the Database course. \nfor Dr. Rushdi Hamamreh.</string>
    <string name="tv_about_us">About Us</string>
</resources>