<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/white"
        app:title="News App"
        app:menu="@menu/toolbar_menu"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_general"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="6dp"
                android:textSize="12sp"
                android:text="@string/general" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="6dp"
                android:textSize="12sp"
                android:text="@string/business" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_entertainment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="6dp"
                android:textSize="12sp"
                android:text="@string/entertainment" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="6dp"
                android:textSize="12sp"
                android:text="@string/health" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_science"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="6dp"
                android:textSize="12sp"
                android:text="@string/science" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="6dp"
                android:textSize="12sp"
                android:text="@string/sports" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_technology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="6dp"
                android:textSize="12sp"
                android:text="@string/technology" />
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        android:layout_margin="14dp">

        <androidx.appcompat.widget.SearchView

            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:defaultQueryHint="Search News"
            app:iconifiedByDefault="false"
            android:id="@+id/search_view"/>

    </androidx.cardview.widget.CardView>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:id="@+id/swipe_refresh_layout"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>
